fix mobile navbar item spacing

--- a/styles.css
+++ b/styles.css
@@ -150,9 +150,11 @@
 	nav a {
 		text-align: center;
 		padding: 0;
+		padding-top: 0.5em;
 		display: inline-block;
 		text-decoration: none;
-		width: 7em;
+		width: 7.5em;
+		height: 2.5em;
 		overflow: hidden;
 	}
 
@@ -424,7 +426,7 @@
 		
 		nav:hover,
 		nav:active {
-			height: 28em;
+			height: 27em;
 			transition: 0.3s;
 		}
 		
